--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -32,3 +32,19 @@
         transform: rotate(360deg);
     }
 }
+
+
+
+/* Rotating Animation  */
+@keyframes rotatingAnimation {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loaderImg {
+    animation-name: rotatingAnimation;
+    animation-duration: 1.8s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
